2015-02-24  Gavin Smith  <gavinsmith0123@gmail.com>

	* info/infomap.c (fetch_user_maps): Print an error message if 
	couldn't open init file specified with --init-file.

2015-02-24  Eli Zaretskii  <eliz@gnu.org>

	* info/terminal.c [HAVE_NCURSES_TERMCAP_H && __MINGW32__]: Don't
	include ncurses/termcap.h on MinGW, even if it's available, to
	avoid a useless run-time dependency on the ncurses shared library.

2015-02-24  Gavin Smith  <gavinsmith0123@gmail.com>

	* doc/texinfo.texi: Remove obsolete note about running
	'texinfo-all-menus-update' in Emacs.

2015-02-22  Karl Berry  <karl@gnu.org>

	* pretest 5.9.90.
	* configure.ac: version.
	
	* util/srclist.txt: sync po_document/Makefile.in.in.
	* configure.ac, etc.: finish gettext 0.19.4 update.

2015-02-22  Karl Berry  <karl@gnu.org>

	* tp/maintain/template.pod: tweak text, add __HTML signal.
	* tp/maintain/regenerate_converters_documentation.sh: HTML-specific.
	* tp/Makefile.am (do-pm-doc): new target to call that script.
	* tp/Texinfo/Convert/*.pm: remake pod with that script/target.

2015-02-22  Karl Berry  <karl@gnu.org>

	* info/Makefile.am (EXTRA_DIST): remove t/Cleanup.inc (gone).
	* README-hacking,
	* tp/README,
	* tp/tests/README,
	* tp/t/README: a few words about adding new tests.
	
	* tp/maintain/all_tests.sh,
	* tp/maintain/regenerate_cmd_tests.sh,
	* tp/maintain/prepare_perl_module_files.sh: copyright years.
	
	* tp/maintain/MANIFEST_generated_files,
	* tp/MANIFEST: regenerate.

2015-02-21  Eli Zaretskii  <eliz@gnu.org>

	* info/info-utils.c [__MINGW32__]: Undef wcwidth, to avoid its
	redirection from the MinGW-specific version in pcterm.c.

	* info/pcterm.c (wcwidth) [_WIN32] [!HAVE_WCWIDTH]: A replacement
	for wcwidth that works around the slow-down in the Gnulib version.

2015-02-21  Gavin Smith  <gavinsmith0123@gmail.com>

	* info/session.c (info_move_to_prev_xref)
	(info_move_to_next_xref): Don't include skipped-over nodes in
	window history, and handle case of no xref being found.